<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="br.com.projetofinal.foodtracker.activity.PrincipalActivity"
    android:id="@+id/drawer_layout_usuario">
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:id="@+id/textView4"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:text="@string/lbl_cartao_fidelidade"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/lbl_total_cadastrados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:id="@+id/total_cadastrados"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_below="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />

        <TextView
            android:text="@string/lbl_codigos_restantes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="48dp"
            android:id="@+id/codigos_restantes"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_below="@+id/total_cadastrados" />

        <Button
            android:text="@string/btn_utilizar_premio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_cadastrar_qrcode"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/btn_utilizar_premio" />

        <Button
            android:text="@string/btn_cadastrar_qrcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:layout_marginTop="121dp"
            android:id="@+id/btn_cadastrar_qrcode"
            android:layout_below="@+id/codigos_restantes"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigation_view"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start">
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>