<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="br.com.projetofinal.foodtracker.activity.AvaliacaoActivity"
    android:id="@+id/drawer_layout_usuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="left">
        <TextView
            android:text="@string/lbl_avaliacao_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_avaliacao_titulo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <TextView
            android:text="@string/lbl_ambiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:text="@string/lbl_cozinha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_cozinha"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:text="@string/lbl_comida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textSize="18sp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:text="@string/lbl_atendimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_atendimento"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="right">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingAmbiente"
            android:layout_marginTop="120dp"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingCozinha"
            android:layout_marginTop="10dp"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingComida"
            android:layout_marginTop="10dp"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingAtendimento"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:text="@string/btn_enviar_avaliacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:layout_marginBottom="25dp"
            android:id="@+id/btn_enviar_avaliacao"
            android:layout_marginTop="200dp"/>
    </LinearLayout>


    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigation_view"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
